--- a/wfa/css/ewcScreen.css
+++ b/wfa/css/ewcScreen.css
@@ -23,6 +23,26 @@ select {
     margin-bottom: 3px;
 }
 
+select,
+textarea,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"] {
+  font-size: 12px;
+}
+
+
 #wineCalcContainer {
     text-align: left;
     width: 900px;
