--- a/adoptapet/style.css
+++ b/adoptapet/style.css
@@ -7,11 +7,18 @@ body {
     list-style: none;
 }
 
+#loader {
+    position: relative;
+}
+
 .lds-ring {
     display: inline-block;
-    position: relative;
     width: 64px;
     height: 64px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -32px 0 0 -32px;
   }
   .lds-ring div {
     box-sizing: border-box;
