--- a/adoptapet/style-2580.css
+++ b/adoptapet/style-2580.css
@@ -2,13 +2,37 @@ body {
     font: normal 18px Arial, sans-serif;
 }
 
-#petlist {
+.masonry-image-list {
+    -webkit-column-count: 5;
+    column-count: 5;
+    -webkit-column-gap: 16px;
+    column-gap: 16px;
     margin-top: 1rem;
-    list-style: none;
+}
+
+@media screen and (max-width: 480px) {
+    .masonry-image-list {
+        -webkit-column-count: 1;
+        column-count: 1;
+        -webkit-column-gap: 16px;
+        column-gap: 16px;
+        margin-top: 1rem;
+    }
+}
+
+@media screen and (min-width: 481px) and (max-width: 1024px) {
+    .masonry-image-list {
+        -webkit-column-count: 4;
+        column-count: 4;
+        -webkit-column-gap: 16px;
+        column-gap: 16px;
+        margin-top: 1rem;
+    }
 }
 
 #loader {
     position: relative;
+    margin-top: 4rem;
 }
 
 .lds-ring {
@@ -19,8 +43,9 @@ body {
     top: 50%;
     left: 50%;
     margin: -32px 0 0 -32px;
-  }
-  .lds-ring div {
+}
+
+.lds-ring div {
     box-sizing: border-box;
     display: block;
     position: absolute;
@@ -31,25 +56,30 @@ body {
     border-radius: 50%;
     animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
     border-color: lightgreen transparent transparent transparent;
-  }
-  .lds-ring div:nth-child(1) {
+}
+
+.lds-ring div:nth-child(1) {
     animation-delay: -0.45s;
-  }
-  .lds-ring div:nth-child(2) {
+}
+
+.lds-ring div:nth-child(2) {
     animation-delay: -0.3s;
-  }
-  .lds-ring div:nth-child(3) {
+}
+
+.lds-ring div:nth-child(3) {
     animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
+}
+
+@keyframes lds-ring {
     0% {
-      transform: rotate(0deg);
+        transform: rotate(0deg);
     }
+
     100% {
-      transform: rotate(360deg);
+        transform: rotate(360deg);
     }
-  }
-  
+}
+
 
 .button {
     font-size: 14px;
@@ -62,11 +92,11 @@ body {
     display: inline-flex;
     position: relative;
     -ms-flex-align: center;
-        align-items: center;
+    align-items: center;
     -ms-flex-pack: center;
-        justify-content: center;
+    justify-content: center;
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
     min-width: 160px;
     height: 48px;
     border: none;
@@ -74,28 +104,20 @@ body {
     /* @alternate */
     line-height: inherit;
     -webkit-user-select: none;
-       -moz-user-select: none;
-        -ms-user-select: none;
-            user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
     -webkit-appearance: none;
     overflow: hidden;
     vertical-align: middle;
     border-radius: 2px;
-    background-color: #6200ee; 
+    background-color: #6200ee;
     color: #fff;
 }
 
-ol {
-    margin: 0;
-    padding-left: 0;
-}
+li {}
 
-li {
-    margin-top: 16px;
-    margin-bottom: 16px;
-}
-
-li p img {
+li img {
     border: 2px solid #f0f0f0;
 }
 
